<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >


            <ImageView
                android:layout_marginTop="126dp"
                android:id="@+id/logoMappy"
                android:contentDescription="@string/Descripcion_logo"
                android:layout_width="171dp"
                android:layout_height="191dp"
                app:srcCompat="@drawable/logo_mappy" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="330dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_border"
                android:text="@string/login"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtOr"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or" />

            <Button

                android:layout_marginTop="20dp"
                android:id="@+id/btnRegister"
                android:layout_width="330dp"
                android:layout_height="48dp"
                android:background="@drawable/button_border_centerless"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/register" />

            <Button
                android:layout_marginTop="20dp"
                android:id="@+id/btnGoogle"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="bold"
                android:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/google"
                android:layout_height="wrap_content"
                android:text="@string/google" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>