<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityForgotPassword">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"

            >

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:contentDescription="@string/btnBack"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                app:srcCompat="@drawable/baseline_arrow_back_ios_black_48dp" />

            <ImageView
                android:id="@+id/logoMappy"
                android:layout_width="171dp"
                android:layout_height="191dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/Descripcion_logo"
                app:srcCompat="@drawable/logo_mappy" />

            <TextView
                android:id="@+id/txtPassRecovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passRecovery"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="32sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:text="@string/emailRecovery"
                android:textColor="@color/black"
                android:textSize="16sp"

                />

            <EditText
                android:id="@+id/txtForgotPass"
                android:layout_width="330dp"
                android:layout_height="48dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/exampleEmail"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@id/txtPass"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/black"
                android:textColorHint="#2E7D32"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btnPasswordRecovery"
                android:layout_width="330dp"
                android:layout_height="48dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_border"
                android:text="@string/btnPassRecovery"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>