<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegister">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        >

        <LinearLayout
            android:paddingBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:contentDescription="@string/btnBack"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                app:srcCompat="@drawable/baseline_arrow_back_ios_black_48dp" />

            <ImageView
                android:id="@+id/logoMappy"
                android:layout_width="171dp"
                android:layout_height="191dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/Descripcion_logo"
                app:srcCompat="@drawable/logo_mappy" />

            <TextView
                android:id="@+id/txtvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerScreen"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/txtvBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:paddingTop="30dp"
                android:text="@string/registerBirth"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:calendarTextColor="@color/black"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/txtName"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:text="@string/registerName"
                android:textColor="@color/black"
                android:textSize="16sp"

                />

            <EditText
                android:id="@+id/txtName"
                android:layout_width="330dp"
                android:layout_height="48dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:nextFocusDown="@id/txtLastName"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black"
                android:textColorHint="#2E7D32"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/txtLastName"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:text="@string/registerLastName"
                android:textColor="@color/black"
                android:textSize="16sp"

                />

            <EditText
                android:id="@+id/txtLastName"
                android:layout_width="330dp"
                android:layout_height="48dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:nextFocusDown="@id/txtEmail"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black"
                android:textColorHint="#2E7D32"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/txtEmail"
                android:nextFocusDown="@id/txtEmail"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="16sp"

                />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="330dp"
                android:layout_height="48dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/exampleEmail"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@id/txtPass"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/black"
                android:textColorHint="#2E7D32"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <TextView

                android:id="@+id/txtvPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:labelFor="@id/txtPass"

                />

            <EditText
                android:id="@+id/txtPass"
                android:nextFocusDown="@id/txtName"
                android:layout_width="330dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/examplePass"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/black"
                android:textColorHint="#2E7D32"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />



            <Button
                android:id="@+id/btnRegister"
                android:layout_width="330dp"
                android:layout_height="48dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_border"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="16sp"

                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>